--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,28 @@ body {
   color: #FEF2BF;
 }
 
+.myButton {
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:1.5rem;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+  margin-bottom: 2rem;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
 /* classes */
 
 .container {
@@ -132,8 +154,8 @@ body {
   .btn {
     margin: 12px;
     display: inline-block;
-    height: 75px;
-    width: 75px;
+    height: 80px;
+    width: 80px;
     border: 8px solid black;
     border-radius: 20%;
 
