cambio en letra de myButton

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:'Press Start 2P', cursive;
 	font-size:1.5rem;
 	padding:16px 31px;
 	text-decoration:none;
